ajout contact au footer

--- a/index.html
+++ b/index.html
@@ -728,11 +728,11 @@
     
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light mt-5 wow fadeInUp" data-wow-delay="0.1s">
+    <!-- <div class="container-fluid bg-dark text-light mt-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="row gx-5">
                 <div class="col-lg-4 col-md-6 footer-about">
-                    <!-- <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary p-4">
+                    <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary p-4">
                         <a href="index.html" class="navbar-brand">
                             <h1 class="m-0 text-white"><i class="fa fa-user-tie me-2"></i>Viva Tremblant</h1>
                         </a>
@@ -743,9 +743,9 @@
                                 <button class="btn btn-dark">Sign Up</button>
                             </div>
                         </form>
-                    </div> -->
+                    </div>
                 </div>
-                <!-- <div class="col-lg-8 col-md-6">
+                <div class="col-lg-8 col-md-6">
                     <div class="row gx-5">
                         <div class="col-lg-4 col-md-12 pt-5 mb-5">
                             <div class="section-title section-title-sm position-relative pb-3 mb-4">
@@ -797,18 +797,19 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="container-fluid text-white" style="background: #061429;">
         <div class="container text-center">
-            <div class="row justify-content-end">
+            <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-6">
                     <div class="d-flex align-items-center justify-content-center" style="height: 75px;">
-                        <p class="mb-0">&copy; <a class="text-white border-bottom" href="#">Viva Tremblant</a>. Tous droit réservés. 
-						
-						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                        <div>
+                            <p class="mt-2 mb-2">info@vivatremblant.ca | 514-267-8687</p>
+                            <p class="mt-2 mb-2">&copy; <a class="text-white border-bottom" href="#">Viva Tremblant</a>. Tous droit réservés.</p>
+                        </div>
                     </div>
                 </div>
             </div>
