--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
                     <div class="d-flex align-items-center justify-content-center" style="height: 75px;">
                         <div>
                             <p class="mt-2 mb-2">info@vivatremblant.ca | 438 388 1179</p>
-                            <p class="mt-2 mb-2">&copy; <a class="text-white border-bottom" href="#">Viva Tremblant</a>. Tous droit réservés.</p>
+                            <p class="mt-2 mb-2">&copy; <a class="text-white border-bottom" href="#">Viva Tremblant</a> Tous droits réservés.</p>
                         </div>
                     </div>
                 </div>
