--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 
 
     <!-- Topbar Start -->
-    <div class="container-fluid bg-dark px-5 d-none d-lg-block">
+    <!-- <div class="container-fluid bg-dark px-5 d-none d-lg-block">
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <!-- <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</small> -->
+                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</small>
                     <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>438 388 1179</small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@vivatremblant.ca</small>
                 </div>
             </div>
-            <!-- <div class="col-lg-4 text-center text-lg-end">
+            <div class="col-lg-4 text-center text-lg-end">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-twitter fw-normal"></i></a>
                     <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
@@ -813,7 +813,7 @@
                 <div class="col-lg-8 col-md-6">
                     <div class="d-flex align-items-center justify-content-center" style="height: 75px;">
                         <div>
-                            <p class="mt-2 mb-2">info@vivatremblant.ca | 438 388 1179</p>
+                            <p class="mt-2 mb-2"><i class="fa fa-envelope-open me-2"></i> info@vivatremblant.ca | &nbsp;<i class="fa fa-phone-alt me-2"></i> 438 388 1179</p>
                             <p class="mt-2 mb-2">2024 &copy; <a class="text-white border-bottom" href="#">Viva Tremblant</a> Tous droits réservés.</p>
                         </div>
                     </div>
