--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
+
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -33,7 +35,8 @@
 
 <body class="bg-light">
     <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+    <div id="spinner"
+        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner"></div>
     </div>
     <!-- Spinner End -->
@@ -58,14 +61,15 @@
                     <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle" href=""><i class="fab fa-youtube fw-normal"></i></a>
                 </div>
             </div> -->
-        </div>
+    </div>
     </div>
     <!-- Topbar End -->
 
 
     <!-- Navbar & Carousel Start -->
-    <div class="container-fluid position-relative p-0" >
-        <h1 class="m-0" style="position: absolute; z-index: 1000; padding: 0.6em 0em 0em 0.8em;" > Viva Tremblant</h1>
+    <div class="container-fluid position-relative p-0">
+        <h1 class="m-0" style="position: absolute; z-index: 1000; padding: 0.6em 0em 0em 0.8em; font-family:
+            Italiana sans-serif; font-weight: 400; font-style: normal;"> Viva Tremblant</h1>
         <!-- <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0">
             <a href="index.html" class="navbar-brand p-0">
                 <h1 class="m-0"><img src="img/favicon.png"> Viva Tremblant</h1>
@@ -102,15 +106,20 @@
             </div>
         </nav> -->
 
-        <div id="header-carousel" class="carousel slide carousel-fade"  data-bs-ride="carousel">
+        <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" style="height: 100vh; object-fit: cover;" src="img/TremblantEdgeDusk.jpg" alt="Image">
+                    <img class="w-100" style="height: 100vh; object-fit: cover;" src="img/TremblantEdgeDusk.jpg"
+                        alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-3 animated slideInDown" style="line-height: 2;">Bientôt à votre service</h4>
-                            <h4 class="text-white text-uppercase mb-3 animated slideInDown" style="line-height: 2; color: rgb(216, 163, 16) !important;">¡Prepárate para la Aventura!</h4>
-                            <h4 class="text-white text-uppercase mb-3 animated slideInDown" style="line-height: 2;">Discover us soon !</h4>
+                            <h4 class="text-white text-uppercase mb-3 animated slideInDown" style="line-height: 2;">
+                                Bientôt à votre service</h4>
+                            <h4 class="text-white text-uppercase mb-3 animated slideInDown"
+                                style="line-height: 2; color: rgb(216, 163, 16) !important;">¡Prepárate para la
+                                Aventura!</h4>
+                            <h4 class="text-white text-uppercase mb-3 animated slideInDown" style="line-height: 2;">
+                                Discover us soon !</h4>
                             <!-- <h1 class="display-1 text-white mb-md-4 animated zoomIn">Service humain</h1> -->
                             <!-- <a href="quote.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Free Quote</a> -->
                             <!-- <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Us</a> -->
@@ -728,11 +737,11 @@
         </div>
     </div> -->
     <!-- Vendor End -->
-   
+
     <!-- Listing -->
     <!-- <div class="airbnb-embed-frame" data-id="972448512352639197" data-view="home" data-hide-price="true" style="width: 450px; height: 300px; margin: auto;"><a href="https://www.airbnb.ca/rooms/972448512352639197?guests=1&amp;adults=1&amp;s=66&amp;source=embed_widget">View On Airbnb</a><a href="https://www.airbnb.ca/rooms/972448512352639197?guests=1&amp;adults=1&amp;s=66&amp;source=embed_widget" rel="nofollow">Home in Mont-Tremblant · 1 bedroom · 1 bed · 1 bath</a><script async="" src="https://www.airbnb.ca/embeddable/airbnb_jssdk"></script></div> -->
-   
-   
+
+
     <!-- Footer Start -->
     <!-- <div class="container-fluid bg-dark text-light mt-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
@@ -813,8 +822,10 @@
                 <div class="col-lg-8 col-md-6">
                     <div class="d-flex align-items-center justify-content-center" style="height: 75px;">
                         <div>
-                            <p class="mt-2 mb-2"><i class="fa fa-envelope-open me-2"></i> info@vivatremblant.ca | &nbsp;<i class="fa fa-phone-alt me-2"></i> 438 388 1179</p>
-                            <p class="mt-2 mb-2">2024 &copy; <a class="text-white border-bottom" href="#">Viva Tremblant</a> Tous droits réservés.</p>
+                            <p class="mt-2 mb-2"><i class="fa fa-envelope-open me-2"></i> info@vivatremblant.ca |
+                                &nbsp;<i class="fa fa-phone-alt me-2"></i> 438 388 1179</p>
+                            <p class="mt-2 mb-2">2024 &copy; <a class="text-white border-bottom" href="#">Viva
+                                    Tremblant</a> Tous droits réservés.</p>
                         </div>
                     </div>
                 </div>
