changer police VIVATREMBLANT

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- Navbar & Carousel Start -->
     <div class="container-fluid position-relative p-0">
         <h1 class="m-0" style="position: absolute; z-index: 1000; padding: 0.6em 0em 0em 0.8em; font-family:
-            Italiana sans-serif; font-weight: 400; font-style: normal;"> Viva Tremblant</h1>
+            Italiana; font-weight: 400; font-style: static;"> VIVA TREMBLANT</h1>
         <!-- <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0">
             <a href="index.html" class="navbar-brand p-0">
                 <h1 class="m-0"><img src="img/favicon.png"> Viva Tremblant</h1>
